<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProjectEditorActivity">

    <item android:id="@+id/action_save_project"
        android:title="@string/action_save_project"
        android:icon="@drawable/ic_check_circle_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete_project"
        android:title="@string/cancel_create_project"
        android:icon="@drawable/ic_cancel_white_24dp"
        app:showAsAction="always"/>

    <group>
        <item
            android:id="@+id/action_insert_dummy_measures"
            android:title="@string/action_insert_dummy_measures"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_delete_all_measures"
            android:title="@string/action_delete_all_measures"
            app:showAsAction="never" />
    </group>


</menu>