<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".ProjectEditorActivity"
        android:id="@+id/project_info_form">

        <!-- Project Name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_name_label"
            android:layout_marginLeft="8dp"
            android:paddingLeft="4dp"
            />
        <EditText
            android:id="@+id/edit_project_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/project_name_hint"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:inputType="textCapWords"/>

        <!-- Building Name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building_name_label"
            android:layout_marginLeft="8dp"
            android:paddingLeft="4dp"
            android:layout_marginTop="16dp"
            />

        <EditText
            android:id="@+id/edit_building_name"
            style="@style/EditorFieldStyle"
            android:hint="@string/building_name_hint"
            android:inputType="textCapWords"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            />


        <!-- Utility Spinner -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/utility_spinner_label"
            android:layout_marginLeft="8dp"
            android:paddingLeft="4dp"
            android:layout_marginTop="16dp"
            />

        <Spinner
            android:id="@+id/utility_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/utilities_sample_array"
            android:prompt="@id/building_name"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:paddingTop="8dp"
            android:textAlignment="textStart"
            android:paddingBottom="8dp" />

        <!-- Building Address-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building_address_label"
            android:layout_marginLeft="8dp"
            android:paddingLeft="4dp"
            android:layout_marginTop="16dp"
            />
        <EditText
            android:id="@+id/edit_building_address"
            style="@style/EditorFieldStyle"
            android:hint="@string/project_address_hint"
            android:inputType="textCapWords"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building_city_label"
            android:layout_marginLeft="8dp"
            android:paddingLeft="4dp"
            android:layout_marginTop="16dp"
            />

        <EditText
            android:id="@+id/edit_building_city"
            style="@style/EditorFieldStyle"
            android:hint="@string/city_hint"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/building_state_label"
                    android:layout_marginLeft="8dp"
                    android:paddingLeft="4dp"
                    android:layout_marginTop="16dp"
                    />

                <Spinner
                    android:id="@+id/project_state_spinner"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/us_states"
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/building_zip_code_label"
                    android:layout_marginLeft="8dp"
                    android:paddingLeft="4dp"
                    android:layout_marginTop="16dp"
                    />

                <EditText
                    android:id="@+id/edit_project_zip_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/zip_code_hint"
                    android:inputType="number"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>